<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/left_drawer_scrollable"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--
        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/twitter_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
        -->

        <LinearLayout
            android:id="@+id/LyoLogged"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:background="@drawable/layout_background">

           <ImageView
                android:id="@+id/IvUser"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="center"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="105dp"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/TxtLoggedUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp" />
                <TextView
                    android:id="@+id/TxtLoggedUserEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LytLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:background="@drawable/layout_background">

            <EditText android:id="@+id/TxtLoginUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_user_name"
                android:inputType="text" />

            <EditText android:id="@+id/TxtLoginUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_user_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/login_error"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:textColor="#e30000"
                android:textStyle="bold" />

        </LinearLayout>

        <Button android:id="@+id/BtnUserLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="#228b22"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

        <Button android:id="@+id/BtnUserLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:background="#ffffff"
            android:textColor="#228b22"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/LytMoreActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:showDividers="beginning"
            android:divider="?android:dividerHorizontal"
            android:dividerPadding="6dp" >

            <Button android:id="@+id/BtnNewUser"
                android:text="@string/user_new"
                android:drawableLeft="@drawable/ic_action_user"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#228b22"/>

            <Button android:id="@+id/BtnUserReservation"
                android:text="@string/reservation_list_user"
                android:drawableLeft="@drawable/ic_action_list_2"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#228b22"/>

            <Button android:id="@+id/BtnSettings"
                android:text="@string/action_settings"
                android:drawableLeft="@drawable/ic_action_settings"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#228b22"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
