<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="center"
        android:padding="5dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_detail_info"
            android:layout_marginBottom="5dip"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:id="@+id/LyoSelectedRestaurantDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:id="@+id/headerLinearLay"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/ImgSelectedRestaurantLogo"
                    android:layout_width="150dp"
                    android:layout_height="75dp"/>
                <TextView
                    android:id="@+id/TxtSelectedRestaurantName"
                    android:paddingLeft="10dp"
                    android:layout_toRightOf="@id/ImgSelectedRestaurantLogo"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <ImageButton
            android:id="@+id/BtnRestaurantMap"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_marginTop="20dip"
            android:src="@drawable/google_maps_logo"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:scaleType="fitCenter"/>

        <Button
            android:id="@+id/BtnNewReservation"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_marginTop="20dip"
            android:background="#228b22"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/reservation_do"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:onClick="restoreMainFragment"
            android:text="@string/back"
            android:textColor="#228b22"
            android:textStyle="bold"
            android:background="@drawable/back_button"/>

    </LinearLayout>

</ScrollView>
